Adding projects and details

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>US Tech Solutions</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<p>Presently working as a Python Developer for the client <b>Farmers Insurance</b>. Helping the team by converting various in-house Perl utility modules into Python. Wrote multiple Data Validation Python scripts and remodeled some old broken scripts. Designed various Unit Test cases to support these modules.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -256,7 +256,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>SystemoneX Inc</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>Worked for the clients: <b>Capital One</b> and <b>Charter Communications</b>. As an integral part of the Artifactory team, I helped other teams store and manage binaries in most efficient way. Developed web-based applications and RESTful web services using Django framework, and also wrote various automation scripts reducing manual efforts of the team on basic stuff. Utilized DevOps tools such as New Relic, DataDog, Splunk, Chef, etc.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -274,7 +274,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>LuminoGuru Pvt Ltd</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>Back in India, I hoped into the world of computer programming with the role of Python Engineer at LuminoGuru. Here, I worked on various Python APIs and wrote various parser and scrapers using Python for the extraction of useful data. I was also involved in the development and maintenance of AI based ChatBot for raising the quality of Business.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -310,7 +310,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Illinois Institute of Technology</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<p>Major: Electrical and Computer Engineering<br>Courses: Statistical Pattern Recognition, Computer Vision & Image Processing, OOP & Computer Simulations, Nanodevices Tech., etc.<br>Internship: Worked as a Patents and Research Analyst at <b>Chamberlain Group</b> in Oak Brook, IL.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -328,7 +328,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Panjab University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>Major: Electronics and Electrical Communication Engineering<br>Courses: VLSI Designing, Digital Signal Processing, Satellite Communication, Wireless Communication, Control Systems, etc.<br>Internship: Worked as a Research Assistant at National Institute of Technical Teachers Training and Research. This is where all my love for the programming world actually surfaced.</p>
 	   				</div>
 
    			</div> <!-- /timeline-wrap -->   			
@@ -350,7 +350,7 @@
    			<h5>Projects</h5>
    			<h1>Check Out Some of My Works.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead"></p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -364,13 +364,13 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/projects/liberty.jpg" alt="Liberty">
+	               	<img src="images/projects/alien-invasion.gif" alt="Alien-Invasion">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <h3 class="folio-title">Alien Invasion</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  Arcade Game
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -380,13 +380,13 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/projects/shutterbug.jpg" alt="Shutterbug">
+	               	<img src="images/projects/optimization-algos.jpg" alt="Optimization Algorithms">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
+	                     		<h3 class="folio-title">Optimization Algorithms</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Algo Implementation
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -396,13 +396,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/projects/clouds.jpg"alt="Clouds">
+	               	<img src="images/projects/shortest-path-finder.gif"alt="Shortest Path Finder">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Shortest Path Finder</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Algo Implementation
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -412,13 +412,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/projects/beetle.jpg" alt="Beetle">
+	               	<img src="images/projects/utilities.jpg" alt="Utilities">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">Utilities</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Utility Projects
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
@@ -426,55 +426,25 @@
 	               </div>
 	        		</div> <!-- /folio-item -->     
 
-	        		<div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/projects/lighthouse.jpg" alt="Lighthouse">
-	                  <a href="#modal-05" class="overlay">             		                  
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Web Development
-		     					      </span>		     		
-		     					   </div> 	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->
-
-	            <div class="bgrid folio-item">
-	               <div class="item-wrap">
-	               	<img src="images/projects/salad.jpg" alt="Salad">
-	                  <a href="#modal-06" class="overlay">
-	                     <div class="folio-item-table">
-	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
-		     					    	<span class="folio-types">
-		     					       	  Branding
-		     					      </span>		     		
-		     					   </div>	                      	
-	                     </div>                    
-	                  </a>
-	               </div>
-	        		</div> <!-- /folio-item -->   
+  
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/projects/modals/m-liberty.jpg" alt="" />
+				     		<img src="images/projects/modals/m-alien-invasion.gif" alt="Alien Invasion" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Alien Invasion</h4>		      
+					      <p>Details coming soon!</p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">Python, PyGame</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/tusharteji/PythonProjects2/tree/master/alien_invasion">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -483,18 +453,18 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/projects/modals/m-shutterbug.jpg" alt="" />
+				     		<img src="images/projects/modals/m-optimization-algos.jpg" alt="Optimization Algorithms" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Shutterbug</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Optimization Algorithms</h4>		      
+					      <p>Details coming soon!</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Python, NumPy, Matplotlib</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/tusharteji/PythonProjects2/tree/master/optim_algos">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -503,18 +473,18 @@
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/projects/modals/m-clouds.jpg" alt="" />
+				     		<img src="images/projects/modals/m-shortest-path-finder.gif" alt="Shortest Path Finder" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Clouds</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Shortest Path Finder</h4>		      
+					      <p>Details coming soon!</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Python, PyGame, TKinter</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/tusharteji/PythonProjects2/tree/master/shortest-path">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -523,63 +493,22 @@
 				   <div id="modal-04" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/projects/modals/m-beetle.jpg" alt="" />
+				     		<img src="images/projects/modals/m-utilities.jpg" alt="Utility Projects" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Beetle</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Utility Projects</h4>		      
+					      <p>Details coming soon!</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">Python, APIs, BeautifulSoup, etc.</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/tusharteji/PythonProjects">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
 				   </div> <!-- /modal-04 -->
-
-				   <div id="modal-05" class="popup-modal slider mfp-hide">	
-
-				     	<div class="media">
-				     		<img src="images/projects/modals/m-lighthouse.jpg" alt="" />
-				     	</div>      	
-
-					   <div class="description-box">
-					      <h4>Lighthouse</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-					      <div class="categories">Web Development</div>			               
-					   </div>
-
-			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
-				   </div> <!-- /modal-05 -->
-
-				   <div id="modal-06" class="popup-modal slider mfp-hide">	
-
-				     	<div class="media">
-				     		<img src="images/projects/modals/m-salad.jpg" alt="" />
-				     	</div>      	
-
-					   <div class="description-box">
-					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-					      <div class="categories">Branding</div>			               
-					   </div>
-
-			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
-				   </div> <!-- /modal-06 -->
-
 
 				   <!-- modal popups - end
 	            ============================================================= -->
@@ -603,57 +532,8 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
-
    		</div> 
    	</div> <!-- /section-intro -->
-
-   	<div class="row contact-form">
-
-   		<div class="col-twelve">
-
-            <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
-      			<fieldset>
-
-                  <div class="form-field">
- 						   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
-                  </div>
-                  <div class="form-field">
-	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
-	               </div>
-                  <div class="form-field">
-	     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
-	               </div>                       
-                  <div class="form-field">
-	                 	<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
-	               </div>                      
-                 <div class="form-field">
-                     <button class="submitform">Submit</button>
-                     <div id="submit-loader">
-                        <div class="text-loader">Sending...</div>                             
-       				      <div class="s-loader">
-								  	<div class="bounce1"></div>
-								  	<div class="bounce2"></div>
-								  	<div class="bounce3"></div>
-								</div>
-							</div>
-                  </div>
-
-      			</fieldset>
-      		</form> <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning">            	
-            </div>            
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
-
-         </div> <!-- /col-twelve -->
-   		
-   	</div> <!-- /contact-form -->
 
    	<div class="row contact-info">
 
