Adding border to the project images

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
    			<h5>Projects</h5>
    			<h1>Check Out Some of My Works.</h1>
 
-   			<p class="lead"></p>
+   			<p class="lead">Here are some of my independent projects. This is what I do when I want to have some fun.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
