Adding projects descriptions

--- a/index.html
+++ b/index.html
@@ -438,9 +438,9 @@
 
 					   <div class="description-box">
 					      <h4>Alien Invasion</h4>		      
-					      <p>Details coming soon!</p>
+					      <p>This is a simple version of the popular arcade game “Alien Invasion”. The player controls the ship movement and fires down the aliens attacking from the top trying to invade the planet Earth.</p>
 
-					      <div class="categories">Python, PyGame</div>			               
+					      <div class="categories"><b>Python, PyGame</b></div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -458,15 +458,15 @@
 
 					   <div class="description-box">
 					      <h4>Optimization Algorithms</h4>		      
-					      <p>Details coming soon!</p>
+					      <p>This project is the graphical implementation for solving uncontrained optimization problems. It covers four optimization algorithms:<br><i>1. Steepest Descent<br>2. Newton's Method<br>3. BFGS Quasi-Newton<br>4. Conjugate Gradient</i></p>
 
-					      <div class="categories">Python, NumPy, Matplotlib</div>			               
+					      <div class="categories"><b>Python, NumPy, Matplotlib</b></div>			               
 					   </div>
 
 			         <div class="link-box">
 			            <a href="https://github.com/tusharteji/PythonProjects2/tree/master/optim_algos">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
+			         </div>
 
 				   </div> <!-- /modal-02 -->
 
@@ -478,9 +478,9 @@
 
 					   <div class="description-box">
 					      <h4>Shortest Path Finder</h4>		      
-					      <p>Details coming soon!</p>
+					      <p>Developed a simple gui-based application that implements <b>A* Path Finding Algorithm</b> to approximate the shortest path between two coordinate points in 2-dimensional space. Utilizing the PyGame module, the outcome is depicted via the stepwise visualization of the algorithm.</p>
 
-					      <div class="categories">Python, PyGame, TKinter</div>			               
+					      <div class="categories"><b>Python, PyGame, TKinter</b></div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -498,9 +498,9 @@
 
 					   <div class="description-box">
 					      <h4>Utility Projects</h4>		      
-					      <p>Details coming soon!</p>
+					      <p>I've also developed a number of short utility projects. Some of these programs are:<br><i>1. Weather Forecast<br>2. Currency Converter<br>3. Rate a Movie on IMDb<br>4. Email Client<br>5. Rock, Paper, Scissor Game</i></p>
 
-					      <div class="categories">Python, APIs, BeautifulSoup, etc.</div>			               
+					      <div class="categories"><b>Python, APIs, BeautifulSoup, etc.</b></div>			               
 					   </div>
 
 			         <div class="link-box">
