--- a/index.html
+++ b/index.html
@@ -225,6 +225,24 @@
 
    			<div class="timeline-wrap">
 
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+						<i class="fa fa-briefcase"></i>
+					</div>
+
+					<div class="timeline-header">
+						<h3>Python Developer</h3>
+						<p>May 2022 - Present</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>Technology Square Inc.</h4>
+						<p>Presently working for the client: <b>Bank of America</b>.</p>
+					</div>
+
+				</div> <!-- /timeline-block -->
+
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
@@ -233,12 +251,30 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Python Developer</h3>
-	   					<p>February 2020 - Present</p>
+	   					<p>April 2021 - May 2022</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>TEKsystems</h4>
+	   					<p>Worked for the client: <b>PNC Bank</b>. </p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+
+	   			<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-briefcase"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Python Developer</h3>
+	   					<p>February 2020 - February 2021</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>US Tech Solutions</h4>
-	   					<p>Presently working as a Python Developer for the client <b>Farmers Insurance</b>. Helping the team by converting various in-house Perl utility modules into Python. Wrote multiple Data Validation Python scripts and remodeled some old broken scripts. Designed various Unit Test cases to support these modules.</p>
+	   					<p>Worked for the client: <b>Farmers Insurance</b>. Helped the team by converting various in-house Perl utility modules into Python. Wrote multiple Data Validation Python scripts and remodeled some old broken scripts. Designed various Unit Test cases to support these modules.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -255,26 +291,8 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>SystemoneX Inc</h4>
+	   					<h4>SystemoneX Inc.</h4>
 	   					<p>Worked for the clients: <b>Capital One</b> and <b>Charter Communications</b>. As an integral part of the Artifactory team, I helped other teams store and manage binaries in most efficient way. Developed web-based applications and RESTful web services using Django framework, and also wrote various automation scripts reducing manual efforts of the team on basic stuff. Utilized DevOps tools such as New Relic, DataDog, Splunk, Chef, etc.</p>
-	   				</div>
-
-	   			</div> <!-- /timeline-block -->
-
-	   			<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Python Engineer</h3>
-	   					<p>November 2014 - August 2016</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>LuminoGuru Pvt Ltd</h4>
-	   					<p>Back in India, I hoped into the world of computer programming with the role of Python Engineer at LuminoGuru. Here, I worked on various Python APIs and wrote various parser and scrapers using Python for the extraction of useful data. I was also involved in the development and maintenance of AI based ChatBot for raising the quality of Business.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
