Shortening month names

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Python Developer</h3>
-	   					<p>April 2021 - May 2022</p>
+	   					<p>Apr 2021 - May 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -269,7 +269,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Python Developer</h3>
-	   					<p>February 2020 - February 2021</p>
+	   					<p>Feb 2020 - Feb 2021</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -287,7 +287,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Python Developer</h3>
-	   					<p>July 2018 - January 2020</p>
+	   					<p>Jul 2018 - Jan 2020</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -323,7 +323,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Master Degree</h3>
-	   					<p>August 2016 - May 2018</p>
+	   					<p>Aug 2016 - May 2018</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -341,7 +341,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2007 - June 2011</p>
+	   					<p>Jul 2007 - Jun 2011</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -564,9 +564,9 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            15416 NE 13TH PL<br>
-            BELLEVUE, WA<br>
-            98007 US
+            1311 WILLIAMS AVE<br>
+            ROUND LAKE BEACH, IL<br>
+            60073 US
             </p>
 
    		</div>
