--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            1311 WILLIAMS AVE<br>
+            WILLIAMS AVE<br>
             ROUND LAKE BEACH, IL<br>
             60073 US
             </p>
