--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 					<div class="timeline-content">
 						<h4>Technology Square Inc.</h4>
-						<p>Presently working for the client: <b>Bank of America</b>.</p>
+						<p>Presently working for the client: <b>Bank of America</b>. I have been developing various kinds of Forex trading calculators helping the team advance in its automation-related targets. I am getting to use multitude of in-house tools to perform functional and non-functional requirements on the Quartz (Python) platform.</p>
 					</div>
 
 				</div> <!-- /timeline-block -->
@@ -256,7 +256,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>TEKsystems</h4>
-	   					<p>Worked for the client: <b>PNC Bank</b>. </p>
+	   					<p>Worked for the client: <b>PNC Bank</b>. Designed testing strategies and contributed towards the development of the Recurring Transaction Forecasting Tool (model) that utilized rule-based classifier to predict transactions that have a high probability of being recurring.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
