Changing the domain name

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span><a href="http://www.tusharteji.me">http://www.tusharteji.me</a></span>
+   					<span><a href="http://www.tusharteji.com">http://www.tusharteji.com</a></span>
    				</li>
    				<li>
    					<strong>Email:</strong>
