Replacing old resume with new one and updating current job duties

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 					<div class="timeline-content">
 						<h4>Technology Square Inc.</h4>
-						<p>Presently working for the client: <b>Bank of America</b>. I have been developing various kinds of Forex trading calculators helping the team advance in its automation-related targets. I am getting to use multitude of in-house tools to perform functional and non-functional requirements on the Quartz (Python) platform.</p>
+						<p>Presently working for the client: <b>Bank of America</b>. Developed diverse Forex trading calculators and authored corresponding unit test cases. Automated production release setup with customized releaser scripts, ensuring streamlined and error-free configuration adjustments within the production database.</p>
 					</div>
 
 				</div> <!-- /timeline-block -->
