--- a/index.html
+++ b/index.html
@@ -315,6 +315,24 @@
 
    			<div class="timeline-wrap">
 
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+						<i class="fa fa-graduation-cap"></i>
+					</div>
+
+					<div class="timeline-header">
+						<h3>Master Degree</h3>
+						<p>May 2021 - Dec 2022</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>University of the Cumberlands</h4>
+						<p>Major: Information Technology<br>Worked at PNC Bank as a Python Developer under University's CPT program.</p>
+					</div>
+				
+				</div> <!-- /timeline-block -->
+
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
@@ -328,7 +346,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Illinois Institute of Technology</h4>
-	   					<p>Major: Electrical and Computer Engineering<br>Courses: Statistical Pattern Recognition, Computer Vision & Image Processing, OOP & Computer Simulations, Nanodevices Tech., etc.<br>Internship: Worked as a Patents and Research Analyst at <b>Chamberlain Group</b> in Oak Brook, IL.</p>
+	   					<p>Major: Electrical and Computer Engineering<br><b>Internship: </b>Worked as a Patents and Research Analyst at <b>Chamberlain Group</b> in Oak Brook, IL.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -346,8 +364,10 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Panjab University</h4>
-	   					<p>Major: Electronics and Electrical Communication Engineering<br>Courses: VLSI Designing, Digital Signal Processing, Satellite Communication, Wireless Communication, Control Systems, etc.<br>Internship: Worked as a Research Assistant at National Institute of Technical Teachers Training and Research. This is where all my love for the programming world actually surfaced.</p>
+	   					<p>Major: Electronics and Electrical Communication Engineering<br><b>Internship: </b>Worked as a Research Assistant at National Institute of Technical Teachers Training and Research in Chandigarh, India</p>
 	   				</div>
+				
+				</div> <!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
 
