--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
 					<div class="timeline-content">
 						<h4>University of the Cumberlands</h4>
-						<p>Major: Information Technology<br>Worked at PNC Bank as a Python Developer under University's CPT program.</p>
+						<p><b>Major: </b>Information Technology<br>Worked at PNC Bank as a Python Developer under University's CPT program.</p>
 					</div>
 				
 				</div> <!-- /timeline-block -->
@@ -346,7 +346,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Illinois Institute of Technology</h4>
-	   					<p>Major: Electrical and Computer Engineering<br><b>Internship: </b>Worked as a Patents and Research Analyst at <b>Chamberlain Group</b> in Oak Brook, IL.</p>
+	   					<p><b>Major: </b>Electrical and Computer Engineering<br><b>Internship: </b>Worked as a Patents and Research Analyst at Chamberlain Group in Oak Brook, IL.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -364,7 +364,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Panjab University</h4>
-	   					<p>Major: Electronics and Electrical Communication Engineering<br><b>Internship: </b>Worked as a Research Assistant at National Institute of Technical Teachers Training and Research in Chandigarh, India</p>
+	   					<p><b>Major: </b>Electronics and Electrical Communication Engineering<br><b>Internship: </b>Worked as a Research Assistant at National Institute of Technical Teachers Training and Research in Chandigarh, India</p>
 	   				</div>
 				
 				</div> <!-- /timeline-block -->
