Updating contact information

--- a/index.html
+++ b/index.html
@@ -584,9 +584,8 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            WILLIAMS AVE<br>
-            ROUND LAKE BEACH, IL<br>
-            60073 US
+            ROLLING MEADOWS, IL<br>
+            60008 US
             </p>
 
    		</div>
@@ -613,7 +612,7 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>Phone: +1 (224) 518-6332</p>
+   			<p>Phone: +1 224.518.6332</p>
 
    		</div>
    		
