Changing employer's names

--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
 					</div>
 
 					<div class="timeline-content">
-						<h4>Technology Square Inc.</h4>
-						<p>Presently working for the client: <b>Bank of America</b>. Developed diverse Forex trading calculators and authored corresponding unit test cases. Automated production release setup with customized releaser scripts, ensuring streamlined and error-free configuration adjustments within the production database.</p>
+						<h4>Bank of America</h4>
+						<p>Presently working as a contractor at Bank of America. Developed diverse Forex trading calculators and authored corresponding unit test cases. Automated production release setup with customized releaser scripts, ensuring streamlined and error-free configuration adjustments within the production database.</p>
 					</div>
 
 				</div> <!-- /timeline-block -->
@@ -255,8 +255,8 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>TEKsystems</h4>
-	   					<p>Worked for the client: <b>PNC Bank</b>. Designed testing strategies and contributed towards the development of the Recurring Transaction Forecasting Tool (model) that utilized rule-based classifier to predict transactions that have a high probability of being recurring.</p>
+	   					<h4>PNC Bank</h4>
+	   					<p>Worked as a contractor at PNC Bank. Designed testing strategies and contributed towards the development of the Recurring Transaction Forecasting Tool (model) that utilized rule-based classifier to predict transactions that have a high probability of being recurring.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -273,8 +273,8 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>US Tech Solutions</h4>
-	   					<p>Worked for the client: <b>Farmers Insurance</b>. Helped the team by converting various in-house Perl utility modules into Python. Wrote multiple Data Validation Python scripts and remodeled some old broken scripts. Designed various Unit Test cases to support these modules.</p>
+	   					<h4>Farmers New World Life Insurance</h4>
+	   					<p>Worked as a contractor at Farmers Insurance. Helped the team by converting various in-house Perl utility modules into Python. Wrote multiple Data Validation Python scripts and remodeled some old broken scripts. Designed various Unit Test cases to support these modules.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -291,8 +291,8 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>SystemoneX Inc.</h4>
-	   					<p>Worked for the clients: <b>Capital One</b> and <b>Charter Communications</b>. As an integral part of the Artifactory team, I helped other teams store and manage binaries in most efficient way. Developed web-based applications and RESTful web services using Django framework, and also wrote various automation scripts reducing manual efforts of the team on basic stuff. Utilized DevOps tools such as New Relic, DataDog, Splunk, Chef, etc.</p>
+	   					<h4>Capital One</h4>
+	   					<p>Worked as a contractor at Capital One. As an integral part of the Artifactory team, I helped other teams store and manage binaries in most efficient way. Developed web-based applications and RESTful web services using Django framework, and also wrote various automation scripts reducing manual efforts of the team on basic stuff. Utilized DevOps tools such as New Relic, DataDog, Splunk, Chef, etc.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
